# todo

./: .gitignore  README.md  blah.task  setup.cfg
extension/tasks/: README.md  package.json  vsc-extension-quickstart.md
extension/tasks/syntaxes/: tasks.tmLanguage.json
src/todo/: todo.py
