[metadata]
name = todo-thomasjackdalby
version = 0.0.1
author = Tom Dalby
author_email = thomasjackdalby@gmail.com
description = Simple markdown influenced task tracking system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thomasjackdalby/todo
project_urls =
    Bug Tracker = https://github.com/thomasjackdalby/todo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src